--- a/extensions.html
+++ b/extensions.html
@@ -73,6 +73,36 @@
                         <h5>AI Grammar Checker</h5>
                         <p>문법 교정 확장 프로그램</p>
                     </div>
+                    <div class="card">
+                        <img src="https://lh3.googleusercontent.com/C4_3SNy0J3Cc1cfp92QP0PfSjT0hesBEZYxwtNIVOQoGyLUIkCGRl_FnB7Gy9_L02gT9PiNttFiPQf-Hzzotl-lkzMg=s1280-w1280-h800" alt="추천 앱 4">
+                        <h5>Vertical Tabs in Side Panel</h5>
+                        <p>Display and manage tabs vertically in the browser...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="rec-them">
+                <h2>손끝에서 펼쳐지는 지식의 세계</h2>
+                <div class="cards">
+                    <div class="card">
+                        <img src="https://img.youtube.com/vi/0lTyYx8r6WE/hqdefault.jpg" alt="추천 앱 1">
+                        <h5>Merlin - Ask AI to...</h5>
+                        <p>26-in-1 Chrome extension to Research, Re-write...</p>
+                    </div>
+                    <div class="card">
+                        <img src="https://lh3.googleusercontent.com/DepIiG9srGtAeLJvFDh3XAkKkNjEw2ncQHxx-BggpEssRBXF0lNlz30UEL9oaDGglSw9KXy222cQb1FiyumPyhZjNQ=s1280-w1280-h800" alt="추천 앱 2">
+                        <h5>Wiseone - Your AI...</h5>
+                        <p>Wiseone is your ultimate AI tool to enhance your web...</p>
+                    </div>
+                    <div class="card">
+                        <img src="https://lh3.googleusercontent.com/YIAwyGsKc3clGGiY3OxbM7Wnp4xzJZHbuYwos-51_vkua3DEfUvlcyddaK2mPT1RGW5CMTc6rpBOF78o3XNbawDcUA=s1280-w1280-h800" alt="추천 앱 3">
+                        <h5>ReadPartner: AI ...</h5>
+                        <p>Summarize Articles, Videos, Threads and Selections...</p>
+                    </div>
+                    <div class="card">
+                        <img src="https://img.youtube.com/vi/PtdAtm__2og/hqdefault.jpg" alt="추천 앱 4">
+                        <h5>eJOY AI Dictionary</h5>
+                        <p>Your ultimate knowledge and English learning tool...</p>
+                    </div>
                 </div>
             </div>
         </div>
