--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 
-<body>
+<body> 
 
     <div id="wrapper">
         <div id="header" class="gb-1">
-            <div class="logo">
+            <div class="logo">  
                 <a href="https://chromewebstore.google.com/">
                     <img src="./image/chromestroe.PNG" alt="Chrome 웹 스토어">
                 </a> 
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="index.html" class="menu-link">디스커버</a></li>
                         <li><a href="extensions.html" class="menu-link">확장 프로그램</a></li>
-                        <li><a href="theme.html" class="menu-link">테마</a></li>
+                        <li><a href="theme.html" class="menu-link">테마;</a></li>
                     </ul>
                 </nav>
                 
