--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <ul>
                         <li><a href="index.html" class="menu-link">디스커버</a></li>
                         <li><a href="extensions.html" class="menu-link">확장 프로그램</a></li>
-                        <li><a href="theme.html" class="menu-link">테마;</a></li>
+                        <li><a href="theme.html" class="menu-link">테마</a></li>
                     </ul>
                 </nav>
                 
